# mosse-esp-idf

./: .gitignore  CMakeLists.txt  readme.md  sdkconfig
main/: CMakeLists.txt  benchmark.h  config.cpp  config.h  idf_component.yml  main.cpp  mat.h  mosse.cpp  mosse.h  pins.h  randomutils.h  server.cpp  server.h  track.txt  tracker.cpp  tracker.h  turret.cpp  turret.h
main/front_end/: app.js  index.html
